<resources>
    <string name="app_name">IPCA+</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="oficiais">Oficiais</string>
    <string name="chats">Chats</string>
    <string name="search_bar_icon">search_bar_icon</string>
    <string name="horario">Horário</string>
    <string name="calendario">Calendário</string>
    <string name="convidar_amigos">Convidar amigos</string>
    <string name="noticias">Notícias</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="perfil">Perfil</string>
    <string name="contactos">Contactos</string>
    <string name="info_key">Para verificar a seguranca da sua encriptacao com este\n utilizador, compare os numeros acima com o dispositivo do outro utilizador\n Tambem pode digitalizar o codigo atraves do codigo QR no telemovel de outra pessoa</string>
    <string name="marcar_como_verificado">Marcar como verificado!</string>
    <string name="Oxr_ex">00000 00000 00000\n 00000 00000 00000\n 00000 00000 00000</string>
    <string name="toque_para_ler">Toque para ler</string>

    <string name="forgot_password"><u>Esqueceste-te da password?</u></string>

    <string name="terms_and_conditions">Ao clicares em registar, concordas com os <u>termos e condições</u> de uso do IPCA Plus.</string>
    <string name="inicio">Início</string>

    <string name="default_notification_channel_id" />
    <string name="sharewithfriends">Aqui podes partilhar esta fantástica app com os teus colegas, para isso basta copiares e enviares para os teus amigos ou então carrega no botao abaixo e partilha diretamente.</string>

</resources>