<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.singularity.ipcaplus.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.singularity.ipcaplus.home.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_official_chats"
        android:name="com.singularity.ipcaplus.home.OfficialChatsFragment"
        android:label="@string/oficiais"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.singularity.ipcaplus.calendar.CalendarFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_home" />

</navigation>